# polygon_arbitrage_bot

./: Cargo.toml  README.md  config.toml  setup_db.rs
migrations/: 001_create_arbitrage_opportunities.sql
src/: arbitrage.rs  config.rs  db.rs  dex.rs  main.rs
