[package]
name = "polygon-arb-bot"
version = "0.1.0"
edition = "2024"
default-run = "polygon-arb-bot"

[[bin]]
name = "setup_db"
path = "setup_db.rs"

[dependencies]
ethers = { version = "2.0", features = ["abigen"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
csv = "1.3"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "tls-rustls"] }
dotenvy = "0.15"
